refactor: Port cleanup.sh to Python CLI in src/cli/artifact

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ include = ["src*"]
 analyze = "src.cli.analyze.main:app"
 test = "src.cli.test.main:app"
 validate = "src.cli.validate.main:app"
+artifact = "src.cli.artifact.main:app"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
